--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(@post) do |f| %>
+  <% author_id_field(@post) %><br>
+  <%= f.hidden_field :author_id %>
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
 
